--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-* {
+ /*{
   padding: 0;
   margin: 0;
-}
+}*/
 .header {
   height: 45px;
   line-height: 45px;
@@ -40,7 +40,7 @@ body {
 }
 
 .container {
-  width: 90%;
+  overflow-x: scroll;
   margin: 7% auto;
 }
 
@@ -78,14 +78,14 @@ body {
   position: absolute;
   top: 0;
   right: 50%;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid blue;
   width: 50%;
   height: 20px;
 }
 .org-tree li::after {
   right: auto;
   left: 50%;
-  border-left: 1px solid #ccc;
+  border-left: 1px solid blue;
 }
 
 .org-tree li:only-child::after,
@@ -103,7 +103,7 @@ body {
 }
 
 .org-tree li:last-child::before {
-  border-right: 1px solid #ccc;
+  border-right: 1px solid blue;
   border-radius: 0 5px 0 0;
   -webkit-border-radius: 0 5px 0 0;
   -moz-border-radius: 0 5px 0 0;
@@ -119,13 +119,13 @@ body {
   position: absolute;
   top: 0;
   left: 50%;
-  border-left: 1px solid #ccc;
+  border-left: 1px solid blue;
   width: 0;
   height: 20px;
 }
 
 .org-tree li a {
-  border: 1px solid #ccc;
+  border: 1px solid blue;
   padding: 5px 10px;
   text-decoration: none;
   color: #666;
@@ -158,9 +158,10 @@ body {
 
 .card {
   position: relative;
-  padding-top: 50px;
-  /* width: 300px; */
-}
+  padding-top: 30px;
+  width: 300px;
+}*/
+
 
 .card .image {
   border-radius: 50%;
@@ -174,16 +175,16 @@ body {
 }
 .card .image img {
   border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  border: 13px solid #96f6b7;
+  width: 50px;
+  height: 50px;
+  border: 5px solid #96f6b7;
 }
 .card .card-body {
   background: #fff;
-  height: 56px;
+  height: 30px;
   text-align: center;
   width: 300px;
-  padding-top: 60px;
+  padding-top: 40px;
   border-radius: 16px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -218,4 +219,25 @@ body {
 .card .card-footer img {
   width: 25px;
   margin: 5px;
+} 
+
+
+.grid {
+  overflow-x: scroll;
+  display: grid;
+  grid-template-columns:500px 500px;
+}
+
+.parent {
+  border: 1px solid gray;
+  padding: 10px;
+}
+
+.has-children {
+  grid-template-columns: 1fr 1fr;
+}
+
+.children {
+  border: 1px solid gray;
+  padding: 10px;
 }
